# JKXS-OS

./: .gitignore  Makefile  README.md  busybox.md  dev-env-info.md  mmap.md  monitor.md  multicore.md  sdcard.md
bootloader/: fw_jump.elf
docs/: Busybox调试记录.md  FAT32.md  FAT32优化.md  Multicore&并发控制.md  SBI&多核启动.md  SDcard驱动.md  Usershell.md  busybox shell.md  busybox.md  dev.md  fat32-debug.md  fat32.md  ideas.md  k210.md  mmap.md  (+18 more)
os/: Cargo.toml  Makefile  cleanall.sh  local  makefs.sh
os/src/: config.rs  console.rs  entry.asm  lang_items.rs  loader.rs  main.rs  monitor.rs  sbi.rs  timer.rs  userbin.S
os/src/boards/: fu740.rs  k210.rs  qemu.rs
os/src/drivers/: mod.rs
os/src/drivers/block/: clock.rs  mod.rs  sdcard.rs  sleep.rs  spi.rs  virtio_blk.rs  virtio_fsimg.rs
os/src/drivers/fu740_block/: fu740_sdcard.rs  fu740_spi.rs  mod.rs  sleep.rs
os/src/drivers/k210_block/: k210_sdcard.rs  mod.rs
os/src/drivers/vir_block/: mod.rs  virtio_blk.rs
os/src/fs/: devfs.rs  finfo.rs  fsidx.rs  inode.rs  mod.rs  pipe.rs  stdio.rs  vfile.rs
os/src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mmap.rs  mod.rs  page_table.rs
os/src/multicore/: mod.rs
os/src/sync/: condvar.rs  mod.rs  mutex.rs  semaphore.rs  up.rs
os/src/syscall/: errorno.rs  fs.rs  mod.rs  net.rs  process.rs  signal.rs  sync.rs  thread.rs
os/src/task/: aux.rs  context.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  siginfo.rs  signal.rs  task.rs  time_info.rs  utils.rs
os/src/test/: mod.rs  ttimer.rs
os/src/trap/: context.rs  mod.rs  page_fault.rs  trap.S
(+105 files in other folders)
