[package]
name = "os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
# riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.8"
bitflags = "1.3.2"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers" }
k210-pac = { path = "../external_libs/k210-pac" }
k210-hal = { path = "../external_libs/k210-hal" }
k210-soc = { path = "../external_libs/k210-soc" }
fu740-pac = { path = "../external_libs/fu740-pac" }
fu740-hal = { path = "../external_libs/fu740-hal" }
# fu740-soc = { path = "../dependency/fu740-soc" }
fat32_fs = { path = "../fat32_fs" }
spin = "0.9.2"

[features]
min_log_level_verbose = []
min_log_level_debug = []
min_log_level_info = []
min_log_level_warning = []
min_log_level_error = []
min_log_level_fatal = []
board_qemu = []
board_fu740 = []
local_fu740 = ["board_fu740","min_log_level_debug"]